--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run prepush",
-      "...": "..."
+      "pre-commit": "npm run prepush"
     }
   },
   "author": "Kanstantsin Nekhniadovich",
