--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "cookie-parser": "^1.4.3",
     "envalid": "^4.2.1",
     "husky": "^1.2.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
@@ -41,8 +45,6 @@
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.3.15",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^5.3.15"
   }
 }
