--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "NODE_ENV=dev ts-node server/server.ts",
+    "watch": "nodemon -e ts -w ./server -x npm run start",
     "prestart:prod": "rm -rf dist && tsc",
     "start:prod": "NODE_ENV=production node dist/main.js",
     "lint": "tslint 'server/**/*.ts' --project tsconfig.json --fix --format stylish",
@@ -30,6 +31,7 @@
     "cookie-parser": "^1.4.3",
     "envalid": "^4.2.1",
     "husky": "^1.2.1",
+    "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^1.0.0",
