--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=dev ts-node server/server.ts",
     "watch": "nodemon -e ts -w ./server -x npm run start",
     "prestart:prod": "rm -rf dist && tsc",
-    "start:prod": "NODE_ENV=production node dist/main.js",
+    "start:prod": "NODE_ENV=production node dist/server.js",
     "lint": "tslint 'server/**/*.ts' --project tsconfig.json --fix --format stylish",
     "prepush": "npm run lint"
   },
@@ -23,19 +23,18 @@
     "@types/body-parser": "^1.17.0",
     "@types/connect-mongo": "0.0.39",
     "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.15",
     "@types/node": "^10.12.12",
     "@types/passport": "^0.4.7",
     "@types/passport-local": "^1.0.33",
-    "cookie-parser": "^1.4.3",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
     "envalid": "^4.2.1",
     "husky": "^1.2.1",
     "nodemon": "^1.18.10",
-    "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
@@ -47,6 +46,14 @@
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.3.15"
+    "mongoose": "^5.3.15",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5"
   }
 }
