--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/connect-mongo": "0.0.39",
     "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.15",
     "@types/node": "^10.12.12",
@@ -45,6 +46,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.15"
