--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/mongodb": "^3.1.15",
     "@types/node": "^10.12.12",
     "@types/passport": "^0.4.7",
@@ -49,6 +50,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.3.15"
+    "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.3.15",
+    "passport-jwt": "^4.0.0"
   }
 }
