--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@types/mongodb": "^3.1.15",
     "@types/node": "^10.12.12",
     "@types/passport": "^0.4.7",
+    "@types/passport-facebook": "^2.1.8",
+    "@types/passport-google-oauth": "^1.0.39",
+    "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
     "cookie-parser": "^1.4.3",
     "envalid": "^4.2.1",
